# numpy

./: tril_triu_test.py
numpy/core/: CMakeLists.txt
numpy/core/src/multiarray/: CMakeLists.txt
numpy/core/src/npymath/: CMakeLists.txt
numpy/core/src/npysort/: CMakeLists.txt
numpy/core/src/private/: CMakeLists.txt
numpy/core/src/umath/: CMakeLists.txt
numpy/lib/: twodim_base.py
scratch/: test_left_right_nearest_interpolation.py
