#include_directories(${PROJECT_SOURCE_DIR}/"include")

include_directories(${PYTHON_INCLUDE_DIRS})
include_directories(../private)
include_directories()

add_library(multiarray.so
            alloc.c
            alloc.h
            array_assign_array.c
            array_assign.c
            array_assign.h
            array_assign_scalar.c
            arrayobject.c
            arrayobject.h
            arraytypes.c
            arraytypes.c.src
            arraytypes.h
            buffer.c
            buffer.h
            calculation.c
            calculation.h
            cblasfuncs.c
            cblasfuncs.h
            CMakeLists.txt
            common.c
            common.h
            compiled_base.c
            compiled_base.h
            conversion_utils.c
            conversion_utils.h
            convert.c
            convert_datatype.c
            convert_datatype.h
            convert.h
            ctors.c
            ctors.h
            datetime_busday.c
            datetime_busdaycal.c
            datetime_busdaycal.h
            datetime_busday.h
            datetime.c
            _datetime.h
            datetime_strings.c
            datetime_strings.h
            descriptor.c
            descriptor.h
            dtype_transfer.c
            einsum.c
            einsum.c.src
            flagsobject.c
            getset.c
            getset.h
            hashdescr.c
            hashdescr.h
            item_selection.c
            item_selection.h
            iterators.c
            iterators.h
            lowlevel_strided_loops.c
            lowlevel_strided_loops.c.src
            mapping.c
            mapping.h
            methods.c
            methods.h
            multiarraymodule.c
            multiarraymodule.h
            multiarray_tests.c
            multiarray_tests.c.src
            nditer_api.c
            nditer_constr.c
            nditer_impl.h
            nditer_pywrap.c
            nditer_pywrap.h
            nditer_templ.c
            nditer_templ.c.src
            number.c
            number.h
            numpymemoryview.c
            numpymemoryview.h
            numpyos.c
            numpyos.h
            python_xerbla.c
            refcount.c
            refcount.h
            scalarapi.c
            scalartypes.c
            scalartypes.c.src
            scalartypes.h
            sequence.c
            sequence.h
            shape.c
            shape.h
            ucsnarrow.c
            ucsnarrow.h
            usertypes.c
            usertypes.h
            vdot.c
            vdot.h)
